--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,7 @@ target/*
 src/frontend/node_modules/*
 src/frontend/dist/*
 src/frontend/target/*
+src/frontend/include/*
+src/backend/lib/*
+src/backend/target
+include/*
