--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 target/*
 src/frontend/node_modules/*
 **/.vscode/*
+**/.DS_Store
 src/frontend/dist/*
 src/frontend/target/*
 src/frontend/include/*
