--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 target/*
 src/frontend/node_modules/*
 **/.vscode/*
-**/.DS_Store
+Src/**/.DS_Store
 src/frontend/dist/*
 src/frontend/target/*
 src/frontend/include/*
@@ -13,3 +13,4 @@ src/backend/target
 src/backend/src/DBAccess/Creds.go
 include/*
 config/creds*
+src/.DS_Store
