--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,18 @@
 .vs/*
 .git/*
 target/*
+build/*
+bin/*
 src/frontend/node_modules/*
 **/.vscode/*
-Src/**/.DS_Store
+src/**/.DS_Store
 src/frontend/dist/*
 src/frontend/target/*
 src/frontend/include/*
 src/backend/lib/*
+Src/backend/bin
 src/backend/build
+src/backend/obj
 src/backend/target
 src/backend/src/DBAccess/Creds.go
 include/*
