--- a/src/backend/backend.csproj
+++ b/src/backend/backend.csproj
@@ -8,6 +8,6 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
     <ItemGroup>
-      <PackageReference Include="System.Net.Http" Version="4.3.4" />
+      <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     </ItemGroup>
 </Project>
