--- a/src/backend/backend.csproj
+++ b/src/backend/backend.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
@@ -11,3 +11,21 @@
       <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
     </ItemGroup>
 </Project>
+
+
+    "editor.tokenColorCustomizations": {"textMateRules": 
+        [
+            {
+                "scope": "keyword.control.ref.latex",
+                "settings": {
+                    "foreground": "#FF0000"
+                }
+            },
+            {
+                "scope": "storage.modifier.cs",
+                "settings": {
+                    "foreground": "#FFFF00"
+                }
+            }
+        ]
+    }
