--- a/src/backend/backend.csproj
+++ b/src/backend/backend.csproj
@@ -9,5 +9,6 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+      <PackageReference Include="npgsql" Version="5.0.10" />
     </ItemGroup>
 </Project>
