--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -10,7 +10,6 @@
         "@types/react-dom": "^17.0.9",
         "@types/react-router-dom": "^5.1.8",
         "axios": "^0.21.1",
-
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
         "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -23,6 +22,8 @@
         "html-webpack-plugin": "4.5.0",
         "identity-obj-proxy": "3.0.0",
         "mini-css-extract-plugin": "0.11.3",
+        "mobx": "^6.3.3",
+        "mobx-react": "^7.2.0",
         "optimize-css-assets-webpack-plugin": "5.0.4",
         "pnp-webpack-plugin": "1.6.4",
         "postcss-flexbugs-fixes": "4.2.1",
@@ -77,7 +78,6 @@
             "last 1 safari version"
         ]
     },
-    
     "babel": {
         "presets": [
             "@babel/preset-typescript"
