--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -80,7 +80,7 @@
     },
     "babel": {
         "presets": [
-            "@babel/preset-typescript"
+            "@babel/preset-react"
         ]
     }
 }
