--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,13 +3,15 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+        "axios": "^0.21.1",
+        "htm": "^3.1.0",
+        "mobx": "^6.3.3",
+        "mobx-preact": "^3.0.0",
+        "preact": "^10.5.13"
+    },
+    "devDependencies": {
         "@svgr/webpack": "5.5.0",
         "@types/node": "^12.20.19",
-        "@types/react": "^17.0.18",
-        "@types/react-dom": "^17.0.9",
-        "@types/react-router-dom": "^5.1.8",
-        "axios": "^0.21.1",
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
         "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -18,13 +20,9 @@
         "dotenv-expand": "5.1.0",
         "file-loader": "6.1.1",
         "fs-extra": "^9.0.1",
-        "htm": "^3.1.0",
         "html-webpack-plugin": "4.5.0",
         "identity-obj-proxy": "3.0.0",
         "mini-css-extract-plugin": "0.11.3",
-        "mobx": "^6.3.3",
-        "mobx-react": "^7.2.0",
-        "optimize-css-assets-webpack-plugin": "5.0.4",
         "pnp-webpack-plugin": "1.6.4",
         "postcss-flexbugs-fixes": "4.2.1",
         "postcss-loader": "3.0.0",
@@ -32,38 +30,25 @@
         "postcss-preset-env": "6.7.0",
         "postcss-safe-parser": "5.0.2",
         "prompts": "2.4.0",
-        "react": "^17.0.2",
-        "react-app-polyfill": "^2.0.0",
-        "react-dev-utils": "^11.0.3",
-        "react-dom": "^17.0.2",
-        "react-redux": "^7.2.4",
-        "react-refresh": "^0.8.3",
-        "react-router-dom": "^5.2.0",
-        "redux": "^4.1.1",
         "resolve": "1.18.1",
         "resolve-url-loader": "^3.1.2",
         "sass-loader": "^10.0.5",
         "semver": "7.3.2",
         "style-loader": "1.3.0",
         "terser-webpack-plugin": "4.2.3",
+        "ts-loader": "^9.2.6",
         "ts-pnp": "1.2.0",
         "typescript": "^4.3.5",
         "url-loader": "4.1.1",
         "web-vitals": "^1.1.2",
-        "workbox-webpack-plugin": "5.1.4"
-    },
-    "devDependencies": {
-        "@babel/core": "7.12.3",
-        "babel-loader": "8.1.0",
-        "babel-plugin-named-asset-import": "^0.3.7",
-        "babel-preset-react-app": "^10.0.0",
-        "webpack": "4.44.2",
-        "webpack-dev-server": "3.11.1",
-        "webpack-manifest-plugin": "2.2.0"
+        "webpack": "^5.26.1",
+        "webpack-cli": "^4.5.0",
+        "webpack-dev-server": "^3.11.2",
+        "webpack-manifest-plugin": "^4.0.2"
     },
     "scripts": {
-        "start": "node scripts/start.js",
-        "build": "node scripts/build.js",
+        "start": "webpack serve --config ./webpack.config.js --mode development --host 0.0.0.0",
+        "build": "yarn run clean && webpack --config ./webpack.config.js --mode production --progress",
         "test": "node scripts/test.js"
     },
     "browserslist": {
