--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,24 +3,31 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "axios": "^0.21.1",
+        "@types/react": "^17.0.30",
+        "@types/react-router-dom": "^5.3.1",
+        "axios": "^0.23.0",
         "htm": "^3.1.0",
         "mobx": "^6.3.3",
-        "mobx-preact": "^3.0.0",
-        "preact": "^10.5.13"
+        "mobx-react-lite": "^3.2.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^5.3.0"
     },
     "devDependencies": {
         "@svgr/webpack": "5.5.0",
         "@types/node": "^12.20.19",
+        "@types/react-dom": "^17.0.9",
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
         "case-sensitive-paths-webpack-plugin": "2.3.0",
-        "css-loader": "4.3.0",
+        "copy-webpack-plugin": "^9.0.1",
+        "css-loader": "^6.4.0",
+        "css-minimizer-webpack-plugin": "^3.1.1",
         "dotenv": "8.2.0",
         "dotenv-expand": "5.1.0",
         "file-loader": "6.1.1",
         "fs-extra": "^9.0.1",
-        "html-webpack-plugin": "4.5.0",
+        "html-webpack-plugin": "^5.3.2",
         "identity-obj-proxy": "3.0.0",
         "mini-css-extract-plugin": "0.11.3",
         "pnp-webpack-plugin": "1.6.4",
@@ -48,7 +55,7 @@
     },
     "scripts": {
         "start": "webpack serve --config ./webpack.config.js --mode development --host 0.0.0.0",
-        "build": "yarn run clean && webpack --config ./webpack.config.js --mode production --progress",
+        "build": "yarn autoclean && webpack --config ./webpack.config.js --mode production --progress",
         "test": "node scripts/test.js"
     },
     "browserslist": {
