--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     },
     "devDependencies": {
         "@svgr/webpack": "5.5.0",
+        "@types/copy-webpack-plugin": "^8.0.1",
+        "@types/css-minimizer-webpack-plugin": "^3.0.2",
         "@types/node": "^12.20.19",
         "@types/react-dom": "^17.0.9",
+        "@types/terser-webpack-plugin": "^5.2.0",
         "@types/webpack": "^5.28.0",
+        "@types/webpack-bundle-analyzer": "^4.4.1",
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
         "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -30,7 +34,7 @@
         "fs-extra": "^9.0.1",
         "html-webpack-plugin": "^5.3.2",
         "identity-obj-proxy": "3.0.0",
-        "mini-css-extract-plugin": "0.11.3",
+        "mini-css-extract-plugin": "^2.4.3",
         "pnp-webpack-plugin": "1.6.4",
         "postcss-flexbugs-fixes": "4.2.1",
         "postcss-loader": "3.0.0",
