--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
         "@types/css-minimizer-webpack-plugin": "^3.0.2",
         "@types/node": "^12.20.19",
         "@types/react-dom": "^17.0.9",
-        "@types/terser-webpack-plugin": "^5.2.0",
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
         "bfj": "^7.0.2",
@@ -47,7 +46,7 @@
         "sass-loader": "^10.0.5",
         "semver": "7.3.2",
         "style-loader": "1.3.0",
-        "terser-webpack-plugin": "4.2.3",
+        "terser-webpack-plugin": "^5.2.4",
         "ts-loader": "^9.2.6",
         "ts-node": "^10.4.0",
         "ts-pnp": "1.2.0",
@@ -65,13 +64,13 @@
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
         "clean:build:win": "rimraf \"public\\build\\*",
-        "build:client:dev": "webpack --config ./src/frontend/config/webpack.frontend.dev.ts --watch",
-        "build:server:dev": "webpack --config ./src/backend/config/webpack.backend.dev.ts --watch",
-        "build:client:prod": "webpack --config ./src/frontend/config/webpack.frontend.prod.ts --mode production",
-        "build:server:prod": "webpack --config ./src/backend/config/webpack.backend.prod.ts --mode production",
-        "start:server:prod": "export NODE_ENV=production && node ./dist/server.*.js",
+        "build:frontend:dev": "webpack --config ./webpack.frontend.ts --watch",
+        "build:backend:dev": "webpack --config ./webpack.backend.ts --watch",
+        "build:frontend:prod": "webpack --config ./webpack.frontend.ts --mode production",
+        "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
+        "start:backend:prod": "export NODE_ENV=production && node ./dist/server.*.js",
         "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
-        "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development&& concurrently \"yarn run build:client:dev\" \"wait-on public\\build\\index-dev.html && yarn run build:server:dev\"",
+        "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public\\build\\index-dev.html && yarn run build:server:dev\"",
         "start:iso:prod": "yarn run build:client:prod && yarn run build:server:prod && yarn run start:server:prod",
         "heroku-prebuild": "yarn i --unsafe-perm --dev node-sass && yarn install --dev",
         "heroku-postbuild": "yarn install --dev webpack",
