--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
+        "@types/webpack-dev-server": "^4.3.1",
         "bfj": "^7.0.2",
         "camelcase": "^6.1.0",
         "case-sensitive-paths-webpack-plugin": "2.3.0",
@@ -53,10 +54,10 @@
         "typescript": "^4.3.5",
         "url-loader": "4.1.1",
         "web-vitals": "^1.1.2",
-        "webpack": "^5.26.1",
+        "webpack": "^5.61.0",
         "webpack-bundle-analyzer": "^4.5.0",
         "webpack-cli": "^4.5.0",
-        "webpack-dev-server": "^3.11.2",
+        "webpack-dev-server": "^4.4.0",
         "webpack-manifest-plugin": "^4.0.2"
     },
     "scripts": {
@@ -69,12 +70,17 @@
         "build:frontend:prod": "webpack --config ./webpack.frontend.ts --mode production",
         "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
         "start:backend:prod": "export NODE_ENV=production && node ./dist/server.*.js",
+        "start:frontend:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
+
         "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
         "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public\\build\\index-dev.html && yarn run build:server:dev\"",
         "start:iso:prod": "yarn run build:client:prod && yarn run build:server:prod && yarn run start:server:prod",
         "heroku-prebuild": "yarn i --unsafe-perm --dev node-sass && yarn install --dev",
         "heroku-postbuild": "yarn install --dev webpack",
-        "start": "yarn run start:iso:prod"
+        "start": "yarn run start:frontend:dev"
+    },
+    "resolutions": {
+        "@types/webpack": "^5.26.1"
     },
     "browserslist": {
         "production": [
