--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
         "@types/react-router-dom": "^5.3.1",
         "axios": "^0.23.0",
         "htm": "^3.1.0",
+        "http-status-codes": "^2.1.4",
+        "koa": "^2.13.4",
+        "koa-bodyparser": "^4.3.0",
+        "koa-router": "^10.1.1",
         "mobx": "^6.3.3",
         "mobx-react-lite": "^3.2.1",
+        "pg": "^8.7.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0"
@@ -17,6 +22,7 @@
         "@svgr/webpack": "5.5.0",
         "@types/copy-webpack-plugin": "^8.0.1",
         "@types/css-minimizer-webpack-plugin": "^3.0.2",
+        "@types/koa": "^2.13.4",
         "@types/node": "^12.20.19",
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
@@ -71,7 +77,6 @@
         "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
         "start:backend:prod": "export NODE_ENV=production && node ./dist/server.*.js",
         "start:frontend:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
-
         "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
         "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public\\build\\index-dev.html && yarn run build:server:dev\"",
         "start:iso:prod": "yarn run build:client:prod && yarn run build:server:prod && yarn run start:server:prod",
