--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
         }
     },
     "include": [
-        "src", 
+        "src/**/*.ts", 
         "webpack.backend.ts", 
         "webpack.frontend.ts",
         "webpack.d.ts"
