--- a/package.json
+++ b/package.json
@@ -69,15 +69,15 @@
     "scripts": {
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
-        "clean:build:win": "rimraf \"public\\build\\*",
-        "build:frontend:dev": "webpack --config ./webpack.frontend.ts --watch",
-        "build:backend:dev": "webpack --config ./webpack.backend.ts",
+        "build:frontend:dev": "webpack --config ./webpack.frontend.ts --mode development --watch",
+        "build:backend:dev": "webpack --config ./webpack.backend.ts --mode development",
         "build:frontend:prod": "webpack --config ./webpack.frontend.ts --mode production",
         "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
-        "start:backend:prod": "export NODE_ENV=production && node ./dist/server.*.js",
+        "start:backend:prod": "export NODE_ENV=production && node ./target/backend/snippetVaultBackend.js",
+        "start:backend:dev": "node ./target/backend/snippetVaultBackend.js",
         "start:frontend:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
         "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
-        "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public\\build\\index-dev.html && yarn run build:server:dev\"",
+        "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public/build/index-dev.html && yarn run build:server:dev\"",
         "start:iso:prod": "yarn run build:client:prod && yarn run build:server:prod && yarn run start:server:prod",
         "heroku-prebuild": "yarn i --unsafe-perm --dev node-sass && yarn install --dev",
         "heroku-postbuild": "yarn install --dev webpack",
