--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@types/copy-webpack-plugin": "^8.0.1",
         "@types/css-minimizer-webpack-plugin": "^3.0.2",
         "@types/koa": "^2.13.4",
+        "@types/koa-router": "^7.4.4",
         "@types/node": "^12.20.19",
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
