--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "pg": "^8.7.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^5.3.0"
+        "react-router-dom": "^5.3.0",
+        "ts-pattern": "^3.3.3"
     },
     "devDependencies": {
         "@svgr/webpack": "5.5.0",
