NodeJS hot reload

--- a/package.json
+++ b/package.json
@@ -71,11 +71,11 @@
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
         "build:frontend:dev": "webpack --config ./webpack.frontend.ts --mode development",
-        "build:backend:dev": "webpack --config ./webpack.backend.ts --mode development",
+        "build:backend:dev": "webpack --config ./webpack.backend.ts --mode development --watch",
         "build:frontend:prod": "webpack --config ./webpack.frontend.ts --mode production",
         "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
-        "start:backend:prod": "export NODE_ENV=production && node ./target/backend/snippetVaultBackend.js",
-        "start:backend:dev": "node ./target/backend/snippetVaultBackend.js",
+        "start:backend:prod": "export NODE_ENV=production && nodemon ./target/backend/snippetVaultBackend.js",
+        "start:backend:dev": "nodemon ./target/backend/snippetVaultBackend.js",
         "start:frontend:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
         "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
         "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public/build/index-dev.html && yarn run build:server:dev\"",
