--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/koa": "^2.13.4",
         "@types/koa-router": "^7.4.4",
         "@types/node": "^12.20.19",
+        "@types/pg": "^8.6.1",
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
