--- a/backend.csproj
+++ b/backend.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
+      <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.21" />
       <PackageReference Include="npgsql" Version="5.0.10" />
     </ItemGroup>
 </Project>
