--- a/package.json
+++ b/package.json
@@ -8,12 +8,8 @@
         "axios": "^0.23.0",
         "htm": "^3.1.0",
         "http-status-codes": "^2.1.4",
-        "koa": "^2.13.4",
-        "koa-bodyparser": "^4.3.0",
-        "koa-router": "^10.1.1",
         "mobx": "^6.3.3",
         "mobx-react-lite": "^3.2.1",
-        "pg": "^8.7.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0"
@@ -22,10 +18,7 @@
         "@svgr/webpack": "5.5.0",
         "@types/copy-webpack-plugin": "^8.0.1",
         "@types/css-minimizer-webpack-plugin": "^3.0.2",
-        "@types/koa": "^2.13.4",
-        "@types/koa-router": "^7.4.4",
         "@types/node": "^12.20.19",
-        "@types/pg": "^8.6.1",
         "@types/react-dom": "^17.0.9",
         "@types/webpack": "^5.28.0",
         "@types/webpack-bundle-analyzer": "^4.4.1",
@@ -71,19 +64,10 @@
     "scripts": {
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
-        "build:frontend:dev": "webpack --config ./webpack.frontend.ts --mode development",
-        "build:backend:dev": "webpack --config ./webpack.backend.ts --mode development --watch",
-        "build:frontend:prod": "webpack --config ./webpack.frontend.ts --mode production",
-        "build:backend:prod": "webpack --config ./webpack.backend.ts --mode production",
-        "start:backend:prod": "export NODE_ENV=production && nodemon ./target/backend/snippetVaultBackend.js",
-        "start:backend:dev": "nodemon ./target/backend/snippetVaultBackend.js",
-        "start:frontend:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
-        "start:iso:dev": "export NODE_ENV=development && yarn run clean:build && yarn run build:client:dev & wait-on public/build/index-dev.html && yarn run build:server:dev --inspect",
-        "start:iso:dev:win": "yarn run clean:build:win && set NODE_ENV=development && concurrently \"yarn run build:client:dev\" \"wait-on public/build/index-dev.html && yarn run build:server:dev\"",
-        "start:iso:prod": "yarn run build:client:prod && yarn run build:server:prod && yarn run start:server:prod",
-        "heroku-prebuild": "yarn i --unsafe-perm --dev node-sass && yarn install --dev",
-        "heroku-postbuild": "yarn install --dev webpack",
-        "start": "yarn run start:frontend:dev"
+        "build:dev": "webpack --config ./webpack.frontend.ts --mode development",
+        "build:prod": "webpack --config ./webpack.frontend.ts --mode production",
+        "start:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
+        "start": "yarn run start:dev"
     },
     "resolutions": {
         "@types/webpack": "^5.26.1"
