Move to hexagonal (init)

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ Src/backend/bin
 src/backend/build
 src/backend/obj
 src/backend/target
-src/backend/src/backend/DBAccess/creds.json
+src/backend/adapters/dbStore/creds.json
+src/backend/core/auth/*
 include/*
 config/creds*
 src/**/creds.json
