--- a/backend.csproj
+++ b/backend.csproj
@@ -8,6 +8,7 @@
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
       <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.7" />
       <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.21" />
       <PackageReference Include="npgsql" Version="5.0.10" />
