--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "mobx-react-lite": "^3.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.2.1"
+        "react-router-dom": "^6.2.1",
+        "react-toastify": "^8.1.0"
     },
     "devDependencies": {
         "@svgr/webpack": "5.5.0",
