--- a/backend.csproj
+++ b/backend.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="BCrypt.Net-Next" Version="4.0.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting.Systemd" Version="6.0.0" />
         <PackageReference Include="npgsql" Version="6.0" />
     </ItemGroup>
 </Project>
