--- a/package.json
+++ b/package.json
@@ -65,8 +65,8 @@
     "scripts": {
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
-        "build:dev": "webpack --config ./webpack.frontend.ts --mode development",
-        "build:prod": "webpack --config ./webpack.frontend.ts --mode production",
+        "build:dev": "webpack --mode development --env mode=development --config ./webpack.frontend.ts",
+        "build:prod": "webpack --mode production --env mode=production --config ./webpack.frontend.ts",
         "start:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
         "start": "yarn run start:dev"
     },
