--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "mobx": "^6.3.3",
         "mobx-react-lite": "^3.2.1",
         "react": "^17.0.2",
+        "react-cookie": "^4.1.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
         "react-toastify": "^8.1.0"
