--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,16 @@ src/**/creds.json
 src/.DS_Store
 .DS_Store
 Src/.DS_Store?
+
+gradle/*
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
+
+# Cache of project
+.gradletasknamecache
