DB config (though it still refuses to work)

--- a/src/backend/resources/application.properties
+++ b/src/backend/resources/application.properties
@@ -1,2 +1,10 @@
 
 server.port=10500
+spring.r2dbc.username=postgres
+spring.r2dbc.password=P4$$W0RddD
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/r2dbc
+spring.r2dbc.pool.enabled=true
+spring.r2dbc.pool.initial-size=50
+spring.r2dbc.pool.max-idle-time=1m
+spring.r2dbc.pool.max-size=100
+spring.data.r2dbc.repositories.enabled=false
