--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,9 @@ dependencies {
 
 	implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
+    implementation "org.postgresql:r2dbc-postgresql:0.9.1.RELEASE"
+    implementation "org.springframework.data:spring-data-r2dbc"
     //runtime "io-r2dbc:r2dbc-postgresql"
-
-	implementation "org.springframework.security:spring-security-core"
-
-    implementation 'de.mkammerer:argon2-jvm-nolibs:2.11'
 
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "io.projectreactor:reactor-test"
