--- a/build.gradle
+++ b/build.gradle
@@ -44,8 +44,17 @@ sourceSets {
             srcDirs= ["src/backend/resources"]
         }
     }
+    test {
+        java {
+            srcDirs= ["src/backend/test"]
+        }
+    }
 }
 
-tasks.named("test") {
-	useJUnitPlatform()
+test {
+	failFast = true
+    useJUnitPlatform()
+    maxHeapSize = "1G"
+
+    testLogging.showStandardStreams = true
 }
