--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,11 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
     //implementation "org.postgresql:r2dbc-postgresql:0.9.1.RELEASE"
-    implementation('io.r2dbc:r2dbc-postgresql:1.0.0.M7')
+    //implementation("io.r2dbc:r2dbc-postgresql:1.0.0.M7")
+
+    implementation "io.r2dbc:r2dbc-postgresql"
+    runtimeOnly "org.postgresql:postgresql"
+
     implementation "org.springframework.data:spring-data-r2dbc:1.5.0"
     //runtime "io-r2dbc:r2dbc-postgresql"
 
