--- a/src/backend/resources/application.properties
+++ b/src/backend/resources/application.properties
@@ -1,10 +1,12 @@
 
 server.port=10500
-spring.r2dbc.username=postgres
-spring.r2dbc.password=P4$$W0RddD
-spring.r2dbc.url=r2dbc:postgresql://localhost:5432/r2dbc
+db.username=sv_user
+db.password=shY7x8e*w0e9D2L
+db.schema=sv
+db.host=localhost
+db.dbname=mydb
+db.port=5432
 spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=50
 spring.r2dbc.pool.max-idle-time=1m
 spring.r2dbc.pool.max-size=100
-spring.data.r2dbc.repositories.enabled=false
