--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ gradle-app.setting
 .gradletasknamecache
 src/backend/main/tech/sozonov/SnippetVault/user/auth/*
 src/backend/resources/application.properties
+
+application.properties
