--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "io.projectreactor:reactor-test"
+
+    implementation "com.theicenet:theicenet-cryptography-spring-boot-starter:1.3.2"
 }
 
 sourceSets {
