--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@types/crypto-js": "^4.1.1",
+        "@types/cryptojs": "^3.1.30",
+        "@types/jsbn": "^1.2.30",
         "@types/react": "^17.0.30",
         "@types/react-router-dom": "^5.3.1",
         "axios": "^0.23.0",
+        "crypto-js": "^4.1.1",
         "htm": "^3.1.0",
         "http-status-codes": "^2.1.4",
+        "jsbn": "^1.1.0",
         "mobx": "^6.3.3",
         "mobx-react-lite": "^3.2.1",
         "react": "^17.0.2",
+        "react-cookie": "^4.1.1",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
         "react-toastify": "^8.1.0"
