--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 	testImplementation "org.springframework.boot:spring-boot-starter-test"
 	testImplementation "io.projectreactor:reactor-test"
 
-    implementation "com.theicenet:theicenet-cryptography-spring-boot-starter:1.3.2"
+    implementation "com.nimbusds:srp6a:2.1.0"
 }
 
 sourceSets {
