--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "crypto-js": "^4.1.1",
         "htm": "^3.1.0",
         "http-status-codes": "^2.1.4",
-        "jsbn": "^1.1.0",
+        "jsbi": "^4.3.0",
         "mobx": "^6.3.3",
         "mobx-react-lite": "^3.2.1",
         "react": "^17.0.2",
