--- a/src/backend/resources/application.properties
+++ b/src/backend/resources/application.properties
@@ -10,3 +10,13 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=50
 spring.r2dbc.pool.max-idle-time=1m
 spring.r2dbc.pool.max-size=100
+
+security.require-ssl=true
+server.ssl.enabled=true
+server.ssl.protocol=TLS
+server.ssl.enabled-protocols=TLSv1.2
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=asdfasdf
+server.ssl.key-store-type=pkcs12
+server.ssl.key-alias=1
+server.ssl.key-password=asdfasdf
