--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,17 @@ dependencies {
 
     implementation "com.nimbusds:srp6a:2.1.0"
 }
+buildDir = '.bin'
 
+// compileJava {
+//     options.compilerArgs << "-s"
+//     options.compilerArgs << "$projectDir/.bin"
+
+//     doFirst {
+//         // make sure that directory exists
+//         file(new File(projectDir, "/.bin")).mkdirs()
+//     }
+// }
 sourceSets {
     main {
         java {
