--- a/frontend/package.json
+++ b/frontend/package.json
@@ -66,9 +66,9 @@
     "scripts": {
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
-        "build:dev": "webpack --mode development --env mode=development --config ./webpack.frontend.ts",
-        "build:prod": "webpack --mode production --env mode=production --config ./webpack.frontend.ts",
-        "start:dev": "webpack serve --mode development --config ./webpack.frontend.ts",
+        "build:dev": "webpack --mode development --env mode=development --config ./webpack.config.ts",
+        "build:prod": "webpack --mode production --env mode=production --config ./webpack.config.ts",
+        "start:dev": "webpack serve --mode development --config ./webpack.config.ts",
         "start": "yarn run start:dev"
     },
     "resolutions": {
