--- a/build.gradle
+++ b/build.gradle
@@ -25,17 +25,13 @@ dependencies {
     annotationProcessor "org.projectlombok:lombok"
 	developmentOnly "org.springframework.boot:spring-boot-devtools"
 
-
 	implementation "org.springframework.boot:spring-boot-starter-webflux"
     implementation "org.springframework.boot:spring-boot-starter-data-r2dbc"
-    //implementation "org.postgresql:r2dbc-postgresql:0.9.1.RELEASE"
-    //implementation("io.r2dbc:r2dbc-postgresql:1.0.0.M7")
 
     implementation "io.r2dbc:r2dbc-postgresql"
     runtimeOnly "org.postgresql:postgresql"
 
     implementation "org.springframework.data:spring-data-r2dbc:1.5.0"
-    //runtime "io-r2dbc:r2dbc-postgresql"
 
     implementation "io.netty:netty-all"
 
@@ -61,7 +57,7 @@ sourceSets {
             srcDirs= ["src"]
         }
         resources {
-            srcDirs= ["src/tech/sozonov/SnippetVault/resources"]
+            srcDirs= ["src/main/resources"]
         }
     }
     test {
