--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ Src/.DS_Store?
 _bin/*
 .gradle/*
 gradle/*
+.idea/*
 # Ignore Gradle GUI config
 gradle-app.setting
 
@@ -48,6 +49,7 @@ src/backend/main/tech/sozonov/SnippetVault/user/auth/*
 *.properties
 
 application.properties
+
 
 # Keystores
 *.p12
