--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ sourceSets {
             srcDirs= ["src"]
         }
         resources {
-            srcDirs= ["src/main/resources"]
+            srcDirs= ["config"]
         }
     }
     test {
