--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,22 +58,20 @@
         "typescript": "^4.3.5",
         "url-loader": "4.1.1",
         "web-vitals": "^1.1.2",
-        "webpack": "^5.61.0",
-        "webpack-cli": "^4.5.0",
+        "webpack": "^5.74.0",
+        "webpack-cli": "^4.10.0",
         "webpack-dev-server": "^4.4.0",
         "webpack-manifest-plugin": "^4.0.2"
     },
     "scripts": {
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
-        "build:dev": "webpack --mode development --env mode=development --config ./webpack.config.ts",
+        "build:dev": "yarn webpack --mode development --env mode=development --config ./webpack.config.ts",
         "build:prod": "webpack --mode production --env mode=production --config ./webpack.config.ts",
         "start:dev": "webpack serve --mode development --config ./webpack.config.ts",
         "start": "yarn run start:dev"
     },
-    "resolutions": {
-        "@types/webpack": "^5.26.1"
-    },
+
     "browserslist": {
         "production": [
             ">0.2%",
