--- a/frontend/package.json
+++ b/frontend/package.json
@@ -67,7 +67,7 @@
         "test": "node scripts/test.js",
         "clean:build": "rm -rf target/*",
         "build:dev": "yarn webpack --mode development --env mode=development --config ./webpack.config.ts",
-        "build:prod": "webpack --mode production --env mode=production --config ./webpack.config.ts",
+        "build:prod": "yarn webpack --mode production --env mode=production --config ./webpack.config.ts",
         "start:dev": "webpack serve --mode development --config ./webpack.config.ts",
         "start": "yarn run start:dev"
     },
